# data_science_portfoliio

./: .gitignore  README.md  pyproject.toml
data/: california.csv
notebooks/: Climate_change.ipynb  Matplotlib.ipynb  Netflix.ipynb  Python Typing.ipynb  Retailers_US.ipynb  Seaborn.ipynb  Sistema de recomendaciones de peliculas.ipynb  SpotifyData.ipynb  best_sell_video_games.ipynb  covid19-6.ipynb  police traffic.ipynb  police_traffic.ipynb  tv_show_superball.ipynb  tv_superball.ipynb
notebooks/When Was the Golden Age of Video Games?/: notebook.ipynb
notebooks/data/: caracas.csv  co2-mm-mlo_json.json  co2_mlo_surface-insitu_1_ccgg_DailyData.txt  largest_us_retailers.csv
